FEAT: configs for cinema api and added postgres db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,31 @@
 ﻿services:
   cinema:
     image: cinema
+    container_name: cinema
     build:
       context: .
       dockerfile: Cinema.API/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__Database=Server=cinema-db;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true
+    depends_on:
+      - cinema-db
+
+  cinema-db:
+    image: postgres
+    container_name: cinema-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: Cinema
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_cinema:/var/lib/postgresql/data
+
+volumes:
+  postgres_cinema:
