--- a/Cinema.API/Cinema.API.csproj
+++ b/Cinema.API/Cinema.API.csproj
@@ -22,21 +22,19 @@
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.0.0" />
     </ItemGroup>
 
-    <ItemGroup>
-        <InternalsVisibleTo Include="Cinema.Tests" />
-    </ItemGroup>
-    
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+
+
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
       <Content Include="Movies\.DS_Store" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Screenings\" />
     </ItemGroup>
 
     <ItemGroup>
