--- a/Cinema.API/appsettings.json
+++ b/Cinema.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
+  "AllowedHosts": "*",
+  "ChoosedDatabase": "Database"
 }
