--- a/Cinema.Gateway/appsettings.json
+++ b/Cinema.Gateway/appsettings.json
@@ -1,17 +1,40 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true"
-  },
-  "Jwt": {
-    "Key": "supersecretauthkeythatis32byteslong!",
-    "Issuer": "Cinema.Gateway",
-    "Audience": "Cinema.API"
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true"
+	},
+	"Jwt": {
+		"Key": "supersecretauthkeythatis32byteslong!",
+		"Issuer": "Cinema.Gateway",
+		"Audience": "Cinema.API"
+	},
+	"AllowedHosts": "*",
+	"ReverseProxy": {
+		"Routes": {
+			"publicRoute": {
+				"ClusterId": "publicCluster",
+				"Match": { "Path": "/api/public/screenings/{screeningId}/check-seat-available/{seatId}" },
+				"AuthorizationPolicy": "AllowAnonymous",
+				"Transforms": [ { "PathRemovePrefix": "/api/public" } ]
+			},
+			"protectedRoute": {
+				"ClusterId": "protectedCluster",
+				"Match": { "Path": "/api/protected/{**catchAll}" },
+				"AuthorizationPolicy": "RequireAuthenticatedUser"
+			}
+		},
+		"Clusters": {
+			"publicCluster": {
+				"Destinations": { "publicService": { "Address": "http://localhost:8080/" } }
+			},
+			"protectedCluster": {
+				"Destinations": { "protectedService": { "Address": "http://localhost:8080/" } }
+			}
+		}
+	}
 }
