Fix: Masstransit/Rabbitmq

--- a/Cinema.Gateway/appsettings.json
+++ b/Cinema.Gateway/appsettings.json
@@ -30,10 +30,10 @@
 		},
 		"Clusters": {
 			"publicCluster": {
-				"Destinations": { "publicService": { "Address": "http://localhost:8080/" } }
+				"Destinations": { "publicService": { "Address": "http://cinema:8081/" } }
 			},
 			"protectedCluster": {
-				"Destinations": { "protectedService": { "Address": "http://localhost:8080/" } }
+				"Destinations": { "protectedService": { "Address": "http://cinema:8081/" } }
 			}
 		}
 	}
