--- a/MailService/appsettings.json
+++ b/MailService/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MessageBroker": {
+    "Host": "amqp://cinema-mq:5672",
+    "UserName": "admin",
+    "Password": "password"
+  },
+  "EmailConfig" : {
+    "SmtpServer": "smtp.example.com",
+    "Port": 587,
+    "User": "notification@example.com",
+    "Password": "P@ssw0rd123!",
+    "EnableSsl": true,
+    "Address": "notifications@example.com",
+    "HtmlBody": true
+  }
+
 }
