--- a/BuildingBlocks/BuildingBlocks.csproj
+++ b/BuildingBlocks/BuildingBlocks.csproj
@@ -12,7 +12,7 @@
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
         <PackageReference Include="Mapster" Version="7.4.1-pre01" />
         <PackageReference Include="MassTransit" Version="8.3.2" />
-        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2-develop.2122" />
         <PackageReference Include="MediatR" Version="12.4.0" />
         <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0-preview4" />
         <PackageReference Include="Serilog" Version="4.1.0" />
