--- a/Cinema.API/appsettings.json
+++ b/Cinema.API/appsettings.json
@@ -9,5 +9,10 @@
     "Database": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true"
   },
   "AllowedHosts": "*",
-  "ChoosedDatabase": "Database"
+  "ChoosedDatabase": "Database",
+  "MessageBroker": {
+    "Host": "amqp://cinema-mq:5672",
+    "UserName": "admin",
+    "Password": "password"
+  }
 }
