--- a/Cinema.Gateway/Cinema.Gateway.csproj
+++ b/Cinema.Gateway/Cinema.Gateway.csproj
@@ -27,4 +27,8 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BuildingBlocks\BuildingBlocks.csproj" />
+    </ItemGroup>
+
 </Project>
