--- a/Cinema.Gateway/appsettings.json
+++ b/Cinema.Gateway/appsettings.json
@@ -33,7 +33,12 @@
         "Match": {
           "Path": "/api/protected/{**catchAll}"
         },
-        "AuthorizationPolicy": "RequireAuthenticatedUser"
+        "AuthorizationPolicy": "RequireAuthenticatedUser",
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/api/protected"
+          }
+        ]
       }
     },
     "Clusters": {
