FEAT: Dashboard for OpenTelemetry

--- a/Cinema.API/Dockerfile
+++ b/Cinema.API/Dockerfile
@@ -7,17 +7,18 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Cinema/Cinema.csproj", "Cinema/"]
-RUN dotnet restore "Cinema/Cinema.csproj"
+COPY ["Cinema.API/Cinema.API.csproj", "Cinema.API/"]
+COPY ["BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/"]
+RUN dotnet restore "Cinema.API/Cinema.API.csproj"
 COPY . .
-WORKDIR "/src/Cinema"
-RUN dotnet build "Cinema.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Cinema.API"
+RUN dotnet build "Cinema.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Cinema.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Cinema.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Cinema.dll"]
+ENTRYPOINT ["dotnet", "Cinema.API.dll"]
