--- a/MailService/Dockerfile
+++ b/MailService/Dockerfile
@@ -7,17 +7,18 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["MailService/MailService.csproj", "MailService/"]
-RUN dotnet restore "MailService/MailService.csproj"
+COPY ["MailService/NotificationService.csproj", "MailService/"]
+COPY ["BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/"]
+RUN dotnet restore "MailService/NotificationService.csproj"
 COPY . .
 WORKDIR "/src/MailService"
-RUN dotnet build "MailService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "NotificationService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "MailService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "NotificationService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "MailService.dll"]
+ENTRYPOINT ["dotnet", "NotificationService.dll"]
