FEAT: Cached Repository

--- a/Cinema.API/appsettings.json
+++ b/Cinema.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5432;Database=Cinema;User Id=postgres;Password=postgres;Include Error Detail=true",
+    "Redis": "distributedcache:6379"
   },
   "AllowedHosts": "*",
   "ChoosedDatabase": "Database",
